clusters/newport/apps/flame/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flame-dash
  namespace: apps
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80       
      targetPort: http # the port for the pod
  selector:
    app: flame-dash
